# FU_DB_A10

./: .gitignore  pyproject.toml  readme.md
data/: db.db  life_expectancy_1960_2019.csv  temperature_1961_1990.csv  temperature_1961_1990_cl.csv  temperature_1991_2020.csv  temperature_1991_2020_cl.csv
data/processed/: aggregated_temperature.csv  co2_emission.csv  gdp.csv  max_temperature_per_year.csv  mean_temperature_per_year.csv  min_temperature_per_year.csv  population_growth.csv  population_total.csv
gui/: plot_graphs.py
models/: initial.py
sandbox/: Untitled.ipynb  missing_data_identification.ipynb  my_database.db  test.py
utils/: db_population.py  plot_graphs.py
