[tool.poetry]
name = "fu_db_a10"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
numpy = "^1.20.3"
notebook = "^6.4.0"
pandas = "^1.2.4"
matplotlib = "^3.4.2"
peewee = "^3.14.4"
dash = "^1.20.0"

[tool.poetry.dev-dependencies]
poethepoet = "^0.10.0"

[tool.poe.tasks]
notebook = 'jupyter-notebook'

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.scripts]
notebook = 'poetry shell && jupyter-notebook'